Some layout fixes, added colorpicker for nodes
Had some trouble with the sidebar (particulary in mobile view). Replaced malihu-scrollbar plugin with yasimplescrollbar (may need to be changed) to fix this. Made title in navbar change based on if it fit or not, though the title is now hardcoded. Fixed tiny bugs. Added colorpicker (using palette) to options-modal, mostly so that, when this is added, the children steps can be distinguishable.

--- a/public/css/designer.css
+++ b/public/css/designer.css
@@ -75,5 +75,39 @@ body {
   height: 20px;
 }
 
+/* ---------- Color palet ------------- */
+
+.btn-colorpick {
+  width: 30px;
+  height: 30px;
+}
+
+.btn-colorpick::after {
+  display: none !important;
+}
+
+.bootstrap-colorpalette {
+  padding-left: 4px;
+  padding-right: 4px;
+  white-space: normal;
+  line-height: 1;
+}
+
+.bootstrap-colorpalette div {
+  line-height: 0;
+}
+
+.bootstrap-colorpalette .btn-color {
+  width: 17px;
+  height: 17px;
+  border: 1px solid #fff;
+  margin: 0;
+  padding: 0;
+}
+
+.bootstrap-colorpalette .btn-color:hover {
+  border: 1px solid #000;
+}
+
 
 /*# sourceMappingURL=designer.css.map*/
