--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,5 +26,4 @@
 #sidebarPlaceholder {
   width: 40px;
   height: 40px;
-  position: relative;
 }
